@startuml
title Triptop Class Diagram

class BouwsteenService{
  +getAlleRestaurantsOpLocatie(location : String) : List<Bouwsteen>
  +getRouteNaarBouwsteen(id : int)
}

class BouwsteenRepository {
}
abstract class Bouwsteen {
    - naam : String
    - type : String
    - link : String
    - info : String
    - locatie : Locatie
}

class Restaurant
note left: Per dienst een andere klasse en andere extra inhoud

interface ApiService{
    getBouwstenen(locatie : String) : List<Bouwsteen>
}

class KaartenService{
    +getNaam(location : Location) : String
    +getCoordinaten(location : String) : Locatie
}

abstract class API <T, V> {
    restTemplate : RestTemplate
    voerAPICallUit(<V>) : <T>
}

abstract class APIMetLocatie < T , V>

class BouwsteenController {
    +getAlleRestaurants(locatie : String)
    +getRouteBouwsteen(id: int)
}

abstract class RestaurantAPI <RestaurantBouwsteen,String> {
}

note left: Per dienst een andere klasse

class UberEats
class Thuisbezorgd
class GoogleMapsPlaces
class TrueWayDirection{
+ getRouteBeschrijvingen() : List<String>
}
class RestaurantService
note left: Per dienst een andere klasse en andere extra inhoud

Bouwsteen ^-- Restaurant
BouwsteenService -->" - services" ApiService
ApiService ^-- RestaurantService
API ^-- APIMetLocatie
APIMetLocatie ---> "- kaartenservice" KaartenService
RestaurantAPI ^-- UberEats
RestaurantAPI ^-- Thuisbezorgd
ApiService ^-- KaartenService
RestaurantService --> "-apis" RestaurantAPI
API ^-- TrueWayDirection
API ^-- GoogleMapsPlaces
APIMetLocatie ^-- RestaurantAPI
KaartenService -->"- trueWayDirection" TrueWayDirection
KaartenService ->"- googleMapsPlaces" GoogleMapsPlaces
BouwsteenService --> "- bouwsteenRepository" BouwsteenRepository
BouwsteenController -> "- bouwsteenService" BouwsteenService
@enduml